Changes made suggested by Vipin
