# src/app/watchlist/docs/swagger.yaml
@@ -19,13 +19,13 @@ definitions:
     properties:
       scrips:
         example:
-        - 44
-        - 22
+        - 1
+        - 3
         items:
           type: integer
         type: array
       watchlist_name:
-        example: Mid Watchlist
+        example: Mid watchists
         type: string
     required:
     - scrips
@@ -82,12 +82,16 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: Watchlist scrips deleted successfully
+        "204":
+          description: No Content
           schema:
             type: string
         "400":
           description: Invalid request payload
+          schema:
+            type: string
+        "500":
+          description: Failed to delete scrips
           schema:
             type: string
       summary: Delete scrips from a watchlist
